Refactor index.html for layout and style enhancements
Updated HTML structure and styles for improved layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -1,185 +1,255 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>Algeriano_Neo</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Algeriano_Neo — Ultra 3D</title>
 <style>
-body {
-    margin: 0;
-    background: #020202;
-    font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
-}
+  :root{
+    --neon: #00eaff;
+    --neon-2:#8a2be2;
+    --bg:#020203;
+    --card:#081018;
+  }
+  html,body{height:100%;margin:0;background:linear-gradient(180deg,#020203 0%, #06060a 70%);font-family:"Cairo",system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;}
+  /* HEADER */
+  .header {
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:20px;
+    padding:18px 26px;
+    position:relative;
+    z-index:20;
+    backdrop-filter: blur(6px);
+  }
 
-/* ===== هولوغرام 3D ===== */
+  /* Logo + map container */
+  .brand {
+    display:flex;
+    align-items:center;
+    gap:18px;
+    cursor:default;
+  }
 
-#hero {
-    height: 380px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    perspective: 1200px;
-    position: relative;
-    overflow: hidden;
-}
+  /* 3D logo text */
+  .logo {
+    font-weight:800;
+    font-size:28px;
+    letter-spacing:2px;
+    color:transparent;
+    background:linear-gradient(90deg,var(--neon), var(--neon-2));
+    -webkit-background-clip:text;
+    text-shadow:0 0 14px rgba(0,234,255,0.12), 0 0 28px rgba(138,43,226,0.06);
+    transform-style:preserve-3d;
+    transition:transform .18s ease-out;
+  }
 
-.holo {
-    width: 260px;
-    height: 260px;
-    background: rgba(0, 255, 255, 0.08);
-    border: 1px solid rgba(0, 255, 255, 0.4);
-    backdrop-filter: blur(8px);
-    border-radius: 20px;
-    box-shadow: 0 0 30px #00eaff, inset 0 0 20px #0099cc;
-    transform-style: preserve-3d;
-    transition: 0.2s;
-    position: relative;
-}
+  /* map wrapper (neon holo card) */
+  .map-card{
+    width:92px;
+    height:92px;
+    border-radius:14px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    background:linear-gradient(180deg, rgba(0,234,255,0.04), rgba(138,43,226,0.02));
+    border:1px solid rgba(0,234,255,0.14);
+    box-shadow:
+      0 6px 30px rgba(0,234,255,0.06),
+      inset 0 0 18px rgba(0,234,255,0.03);
+    transform-style:preserve-3d;
+    transition:transform .18s ease-out, box-shadow .18s ease-out;
+    position:relative;
+    overflow:hidden;
+  }
 
-/* خريطة الجزائر داخل الهولوغرام */
+  .map-card::after{
+    content:"";
+    position:absolute;inset:0;
+    box-shadow:0 0 40px rgba(0,234,255,0.07);
+    border-radius:14px;
+    pointer-events:none;
+  }
 
-.algeria {
-    width: 160px;
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    filter: drop-shadow(0 0 18px #00eaff);
-    opacity: 0.9;
-}
+  .map-svg{
+    width:70px;height:70px;
+    filter:drop-shadow(0 0 10px rgba(0,234,255,0.25));
+    transform-style:preserve-3d;
+  }
 
-/* نص 3D */
+  /* center title below header */
+  .hero {
+    padding:52px 18px 36px;
+    text-align:center;
+    pointer-events:none;
+  }
+  .hero h1{
+    margin:0;
+    font-size:48px;
+    font-weight:900;
+    background:linear-gradient(90deg,var(--neon),var(--neon-2));
+    -webkit-background-clip:text;color:transparent;
+    text-shadow:0 0 30px rgba(0,234,255,0.12);
+    transform:translateZ(0);
+  }
+  .hero p{margin:12px auto 0;max-width:820px;color:#bfcbd6;opacity:.9;font-size:18px;}
 
-.logo {
-    position: absolute;
-    bottom: 25px;
-    width: 100%;
-    text-align: center;
-    font-size: 26px;
-    color: #00eaff;
-    font-weight: 800;
-    text-shadow: 0 0 12px #00eaff, 0 0 25px #0099cc;
-}
+  /* ticker */
+  .ticker{
+    margin:18px auto 0;
+    width:100%;
+    background:rgba(255,255,255,0.02);
+    border-top:1px solid rgba(0,234,255,0.06);
+    border-bottom:1px solid rgba(138,43,226,0.04);
+    overflow:hidden;
+    padding:8px 0;
+    position:relative;
+  }
+  .ticker .line{
+    display:inline-block;
+    white-space:nowrap;
+    position:absolute;
+    will-change:transform;
+    animation:marquee 16s linear infinite;
+    color:var(--neon);
+    font-size:16px;
+    padding-left:100%;
+    text-shadow:0 0 12px rgba(0,234,255,0.12);
+  }
+  @keyframes marquee{
+    0%{transform:translateX(-100%);}
+    100%{transform:translateX(100%);}
+  }
 
-/* تأثير ضوئي يخرج من الخلف */
+  /* left menu (vertical) */
+  .menu {
+    position:fixed;
+    right:18px;
+    top:110px;
+    width:210px;
+    background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+    border:1px solid rgba(0,234,255,0.06);
+    border-radius:12px;
+    padding:14px;
+    box-shadow:0 8px 40px rgba(0,0,0,0.6);
+  }
+  .menu h4{margin:0 0 10px;color:var(--neon);text-align:center}
+  .menu a{
+    display:block;padding:12px 10px;color:#e7f7fb;text-decoration:none;font-size:17px;border-radius:8px;margin-bottom:8px;
+    transition:.18s;background:transparent;
+  }
+  .menu a:hover{background:rgba(0,234,255,0.06);color:var(--neon);padding-right:18px;}
 
-#hero::before {
-    content: "";
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    background: radial-gradient(circle, rgba(0,255,255,0.25), transparent 70%);
-    top: -150px;
-    left: 50%;
-    transform: translateX(-50%);
-    filter: blur(40px);
-}
+  /* responsive: on small screens stack header elements */
+  @media (max-width:720px){
+    .header{flex-direction:column;gap:8px;padding:14px}
+    .brand{gap:12px}
+    .map-card{width:78px;height:78px}
+    .logo{font-size:26px}
+    .hero h1{font-size:34px}
+    .menu{right:10px;top:140px;width:180px}
+  }
 
-/* ===== شريط الأخبار ===== */
-
-.ticker {
-    background: #0a0a0a;
-    border-top: 1px solid #00eaff;
-    border-bottom: 1px solid #00eaff;
-    color: white;
-    padding: 10px;
-    overflow: hidden;
-    position: relative;
-}
-
-.ticker span {
-    position: absolute;
-    white-space: nowrap;
-    animation: scroll 14s linear infinite;
-    font-size: 16px;
-    color: #00eaff;
-}
-
-@keyframes scroll {
-    from { right: -100%; }
-    to { right: 100%; }
-}
-
-/* ===== القائمة العمودية ===== */
-
-.menu {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    background: rgba(10,10,10,0.75);
-    border: 1px solid #00eaff;
-    padding: 15px;
-    border-radius: 15px;
-    width: 170px;
-    box-shadow: 0 0 25px #00eaff;
-}
-
-.menu h3 {
-    margin: 0 0 10px;
-    color: #00eaff;
-    text-align: center;
-    font-size: 18px;
-}
-
-.menu a {
-    text-decoration: none;
-    color: white;
-    display: block;
-    padding: 8px 0;
-    transition: 0.3s;
-}
-
-.menu a:hover {
-    padding-left: 10px;
-    color: #00eaff;
-}
-
+  /* small polished footer spacer */
+  .spacer{height:90vh}
 </style>
 </head>
-
 <body>
 
-<!-- ====== 3D HOLOGRAM HEADER ====== -->
-<div id="hero">
-    <div class="holo" id="holoBox">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/77/Flag-map_of_Algeria.svg" class="algeria">
+  <header class="header">
+    <!-- brand: logo text + small subtitle -->
+    <div class="brand" id="brand">
+      <!-- map card sits visually beside the logo -->
+      <div class="map-card" id="mapCard" title="خريطة الجزائر">
+        <!-- using public SVG (safe) - inline <img> pointing to Wikimedia svg -->
+        <img class="map-svg" alt="Algeria" src="https://upload.wikimedia.org/wikipedia/commons/7/77/Flag-map_of_Algeria.svg">
+      </div>
 
-        <div class="logo">Algeriano_Neo</div>
+      <div style="display:flex;flex-direction:column;align-items:flex-start;">
+        <div class="logo" id="logoText">Algeriano_Neo</div>
+        <div style="font-size:12px;color:#9fbfdc;margin-top:6px;opacity:.9;">منصّة جزائرية ذكية • تجارة • ترفيه • خدمات</div>
+      </div>
     </div>
-</div>
 
-<!-- ===== شريط الاخبار ===== -->
-<div class="ticker">
-    <span>🔥 مرحباً بكم في Algeriano_Neo — أول منصة جزائرية 3D تجمع التجارة والخدمات والصحة والترفيه والسائقين والنساء 🔥</span>
-</div>
+    <!-- right side: small quick actions (placeholder) -->
+    <div style="display:flex;gap:12px;align-items:center;">
+      <button onclick="toggleMenu()" style="background:transparent;border:1px solid rgba(255,255,255,0.04);color:#bfefff;padding:10px 12px;border-radius:10px;cursor:pointer;box-shadow:0 6px 20px rgba(0,234,255,0.03)">القائمة</button>
+    </div>
+  </header>
 
-<!-- ===== القائمة العمودية ===== -->
-<div class="menu">
-    <h3>الأقسام</h3>
-    <a href="#">الرئيسية</a>
-    <a href="#">التجارة بوسيط</a>
-    <a href="#">الخدمات</a>
-    <a href="#">الترفيه</a>
-    <a href="#">السائقين</a>
-    <a href="#">الصحة</a>
-    <a href="#">قسم المرأة</a>
-    <a href="#">المطاعم</a>
-    <a href="#">العقار</a>
-    <a href="#">التقنية</a>
-    <a href="#">السفر</a>
-    <a href="#">المتجر العام</a>
-</div>
+  <main>
+    <section class="hero" id="hero">
+      <h1>Algeriano_Neo</h1>
+      <p>النسخة الأروع لواجهة 2026 — لوغو ثلاثي الأبعاد، خريطة الجزائر نيون بجنب اللوغو، تفاعلات ماوس خفيفة وتجربة شبابية عالمية.</p>
+    </section>
+
+    <div class="ticker"><div class="line">⚡ Algeriano_Neo — إطلاق تجريبي الآن — انضم وجرّب أقسام التجارة، الخدمات، الصحة، السائقين وقسم المرأة ⚡</div></div>
+
+    <!-- vertical menu -->
+    <aside class="menu" id="sideMenu">
+      <h4>الأقسام</h4>
+      <a href="#">الرئيسية</a>
+      <a href="#">التجارة بوسيط</a>
+      <a href="#">الخدمات</a>
+      <a href="#">الترفيه</a>
+      <a href="#">السائقين</a>
+      <a href="#">الصحة</a>
+      <a href="#">قسم المرأة</a>
+      <a href="#">المطاعم</a>
+      <a href="#">العقار</a>
+      <a href="#">التقنية</a>
+      <a href="#">السفر</a>
+      <a href="#">المتجر العام</a>
+    </aside>
+
+    <div class="spacer"></div>
+  </main>
 
 <script>
-// حركة 3D مع الماوس
-const holo = document.getElementById("holoBox");
+  // 3D tilt for both logo text and map-card
+  const brand = document.getElementById('brand');
+  const mapCard = document.getElementById('mapCard');
+  const logoText = document.getElementById('logoText');
+  const sideMenu = document.getElementById('sideMenu');
 
-document.addEventListener("mousemove", (e) => {
-    let x = (window.innerWidth / 2 - e.pageX) / 40;
-    let y = (window.innerHeight / 2 - e.pageY) / 40;
-    holo.style.transform = `rotateY(${x}deg) rotateX(${y}deg)`;
-});
+  // toggle simple visibility for side menu (mobile friendly)
+  function toggleMenu(){
+    sideMenu.style.display = (sideMenu.style.display === 'block') ? 'none' : 'block';
+  }
+
+  // mouse move tilt effect (gentle)
+  document.addEventListener('mousemove', (e) => {
+    // calculate center-based small angles
+    const cx = window.innerWidth/2;
+    const cy = window.innerHeight/2;
+    const dx = e.clientX - cx;
+    const dy = e.clientY - cy;
+    const rx = (-dy / cy) * 6; // rotateX
+    const ry = (dx / cx) * 6;  // rotateY
+
+    // apply transforms with subtleness
+    const transformVal = `perspective(1000px) rotateX(${rx}deg) rotateY(${ry}deg)`;
+    mapCard.style.transform = transformVal + ' translateZ(6px)';   // map card 3D tilt
+    logoText.style.transform = `translateZ(10px) rotateY(${ry/6}deg)`; // smaller movement for text
+  });
+
+  // small enter animation
+  window.addEventListener('load', () => {
+    mapCard.style.transition = 'transform .35s cubic-bezier(.2,.9,.2,1), box-shadow .35s';
+    mapCard.style.transform = 'perspective(1000px) rotateX(0deg) rotateY(0deg) translateZ(6px)';
+  });
+
+  // mobile touch tilt: use deviceorientation if available (light)
+  if(window.DeviceOrientationEvent){
+    window.addEventListener('deviceorientation', (ev) => {
+      const beta = ev.beta || 0; // x
+      const gamma = ev.gamma || 0; // y
+      const rx = (beta/90) * 6;
+      const ry = (gamma/90) * 6;
+      mapCard.style.transform = `perspective(1000px) rotateX(${rx}deg) rotateY(${ry}deg) translateZ(6px)`;
+    }, true);
+  }
 </script>
 
 </body>
